add_executable(T2014094 T2014094.cpp)

add_executable(T2014124 T2014124.cpp)

add_executable(T2015034 T2015034.cpp)

add_executable(T2015094 T2015094.cpp)

add_executable(T2015124 T2015124.cpp)

add_executable(T2016044 T2016044.cpp)

add_executable(T2016093 T2016093.cpp)

add_executable(T2017093 T2017093.cpp)

add_executable(T2017095 T2017095.cpp)

add_executable(T2017123 T2017123.cpp)

add_executable(T2018033 T2018033.cpp)

add_executable(T2018093 T2018093.cpp)

add_executable(T2018094 T2018094.cpp)