add_executable(ksm 快速幂.cpp)
add_executable(xds1 线段树递归实现.cpp)
add_executable(xds2 线段树非递归实现.cpp)
add_executable(xds3 线段树差分非递归实现.cpp)
add_executable(split split.cpp)

add_executable(rqxg 日期相关.cpp)
add_executable(assf 埃氏筛法.cpp)
add_executable(dxps 对象排序.cpp)

add_executable(bfs BFS.cpp)
add_executable(dfs DFS.cpp)
add_executable(prim Prim.cpp)
add_executable(ssc_koasaraju SSC_Kosaraju.cpp)
add_executable(uf 并查集.cpp)

add_executable(ol 欧拉回路.cpp)

add_executable(szsz 树状数组.cpp)
add_executable(abdcss AlphaBeta剪枝对抗搜索.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(floyd floyd.cpp)
add_executable(dijkstraDFS dijkstraDFS.cpp)

add_executable(sp spfa.cpp)


add_executable(re regex.cpp)

add_executable(jzzh 进制转换.cpp)