add_executable(tyyx 跳跃游戏.cpp)
add_executable(btlj 不同路径.cpp)
add_executable(lqdh 零钱兑换.cpp)
add_executable(zcsszxl 最长上升子序列.cpp)
add_executable(cjzdzxl 乘积最大子序列.cpp)
add_executable(bttbasswc BestTimeToBuyAndSellStockWithCooldown.cpp)
add_executable(ps PerfectSquares.cpp)
add_executable(dccf 单词拆分2.cpp)
add_executable(cqq 戳气球.cpp)
add_executable(zchwzc 最长回文子串.cpp)
add_executable(zzpp 正则匹配.cpp)
add_executable(zcyxkh 最长有效括号.cpp)
add_executable(bjjl 编辑距离.cpp)
add_executable(zdjx 最大矩形.cpp)
add_executable(jczfc 交错字符串.cpp)
add_executable(btzxl 不同子序列.cpp)

add_executable(mmgpdzzsq3 买卖股票的最佳时期3.cpp)
add_executable(mmgpdzzsq4 买卖股票的最佳时期4.cpp)

add_executable(pjzds 拼接最大数.cpp)

