add_executable(cjpx 成绩排序.cpp)

add_executable(ysgs 约数个数.cpp)

add_executable(ysgs2 约数个数2.cpp)

add_executable(dlfwq 代理服务器.cpp)

add_executable(fxsc 反序输出.cpp)

add_executable(zysgs 质因数个数.cpp)

add_executable(zscf 整数拆分.cpp)

add_executable(qdbjytj 球的半径与体积.cpp)

add_executable(ecsbl 二叉树遍历.cpp)

add_executable(myrdmm 玛雅人的密码.cpp)

add_executable(qzdshzxs 求最大数和最小数.cpp)

add_executable(zxyps 最小邮票数.cpp)

add_executable(abc abc.cpp)

add_executable(qrtnk 求rootNK.cpp)

add_executable(dsjc 大数阶乘.cpp)

add_executable(jndjt 今年第几天.cpp)

add_executable(wsvsys 完数VS盈数.cpp)

add_executable(zdxlh 最大序列和.cpp)

add_executable(zxhf 最小花费.cpp)

add_executable(sjzvsejz 十进制VS二进制.cpp)